# chc

./: Makefile  Makefile.global.freebsd  Makefile.global.in  Makefile.global.linux  README  build.bat  configure  configure.in  make.bat
config/: mkshortcut.vbs
desktop/: Makefile  chc.desktop
documents/: ChangeLog  INSTALL  Makefile  README
documents/hu/: INSTALL  Makefile  README
languages/: Makefile  chc.pot  chc_hu.mo  chc_hu.po
manual/: Makefile  chc_en.7  chc_hu.7
packaging/autopackage/: default.apspec
packaging/deb/: chc  control  copyright  md5sums  postinst  prerm
packaging/exe/: chc-0.2.nsi
packaging/msi/: chc-0.2.xml
packaging/rpm/: chc-0.2-1.spec
packaging/txz/: slack-desc
packaging/txz-freebsd/: Makefile  distinfo  pkg-descr  pkg-plist
source/: Makefile  chc.lpi  chc.lpr  chc.lrs  chc.nsi  chc.rc  chc.res  config.inc.in  frmabout.lfm  frmabout.lrt  frmabout.pas  frmmain.lfm  frmmain.lrt  frmmain.pas
source/languages/: chc.po
source/pics/: chc.xpm  chc_fig.xcf
